finished hero section, project section, working on contact and resume sections

--- a/src/components/Projects/FitYeah.css
+++ b/src/components/Projects/FitYeah.css
@@ -1,3 +1,8 @@
+.fit-yeah__container {
+  margin-top: 35px;
+  margin-right: 35px;
+}
+
 .fit-yeah > img {
   border-radius: 5px;
   box-shadow: 12px 12px 2px 1px rgba(0, 0, 255, .2);
