--- a/src/components/Projects/Petsy.css
+++ b/src/components/Projects/Petsy.css
@@ -1,3 +1,7 @@
+.petsy__container {
+  margin-top: 35px;
+}
+
 .petsy > img {
   border-radius: 5px;
   box-shadow: 12px 12px 2px 1px rgba(0, 0, 255, .2);
