--- a/src/components/Projects/Hangry.css
+++ b/src/components/Projects/Hangry.css
@@ -1,3 +1,8 @@
+.hangry__container {
+  margin-top: 35px;
+  margin-right: 35px;
+}
+
 .hangry > img {
   border-radius: 5px;
   box-shadow: 12px 12px 2px 1px rgba(0, 0, 255, .2);
