optimized for moble

--- a/src/components/ResumeSection/ResumeSection.css
+++ b/src/components/ResumeSection/ResumeSection.css
@@ -2,3 +2,9 @@
   display: flex;
   justify-content: center;
 }
+
+@media only screen and (max-width: 768px) {
+  .resumeImg > img {
+    width: 500px;
+  }
+}
