--- a/src/components/Projects/Hangry.css
+++ b/src/components/Projects/Hangry.css
@@ -3,6 +3,14 @@
   margin-right: 35px;
 }
 
+.hangry__container > ul {
+  margin-left: 20px;
+}
+
+.hangry__container--div {
+  margin-bottom: 30px;
+}
+
 .hangry > img {
   border-radius: 5px;
   box-shadow: 12px 12px 2px 1px rgba(0, 0, 255, .2);
