--- a/src/components/Projects/Petsy.css
+++ b/src/components/Projects/Petsy.css
@@ -2,6 +2,10 @@
   margin-top: 35px;
 }
 
+.petsy__container--div {
+  margin-bottom: 30px;
+}
+
 .petsy > img {
   border-radius: 5px;
   box-shadow: 12px 12px 2px 1px rgba(0, 0, 255, .2);
